--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT=3001
-MONGODB_URL=mongodb:mongodb+srv://posts_admin:post123@cluster0.kbbj7.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://posts_admin:post123@cluster0.kbbj7.mongodb.net/myFirstDatabase
 MONGODB_NAME=assign_mentor
+
+
+# mongodb+srv://gunal15:<password>@cluster0.orkw7uh.mongodb.net/?retryWrites=true&w=majority
+# mongodb+srv://gunal15:<password>@cluster0.orkw7uh.mongodb.net/test
