--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "Mayuresan",
+  "author": "Gunal",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
